--- a/src/components/CamVideoList.astro
+++ b/src/components/CamVideoList.astro
@@ -5,17 +5,17 @@ import Poster from "@images/vp.webp";
 ---
 
 <div
-  class="landscape:flex landscape:items-start landscape:gap-4"
+  class="landscape:grid landscape:sm:grid-cols-2 landscape:md:grid-cols-5 landscape:gap-4"
   x-data="videoList">
   <article
-    class="sticky top-0 z-10 pt-5 bg-base-100 landscape:grow-2 landscape:w-3/5">
+    class="sticky top-0 z-10 pt-5 bg-base-100 landscape:md:col-span-3 self-start">
     <video controls playsinline class="aspect-video" data-poster={Poster.src}>
       <source />
     </video>
   </article>
 
-  <div class="portrait:my-5 landscape:grow-1">
-    <div class="flex justify-center py-4" x-show="isLoading">
+  <div class="portrait:my-5 landscape:md:col-span-2">
+    <div class="flex justify-center py-8" x-show="isLoading">
       <span class="loading loading-dots loading-xl text-info mx-auto"></span>
     </div>
 
