fix(view.astro): corregir el texto alternativo para el error de carga de la cámara

--- a/src/pages/view.astro
+++ b/src/pages/view.astro
@@ -20,7 +20,7 @@ import { ArrowLeft } from "lucide-astro";
           class="skeleton aspect-video rounded-box shadow-md my-4 flex justify-center items-center italic text-xl"
           alt="Vista de cámara"
           @load="$el.classList.remove('skeleton')"
-          @error="$el.classList.remove('skeleton'); $el.alt = 'Cámara no disponible'"
+          @error="$el.classList.remove('skeleton'); $el.alt = 'Camera not avalaible'"
         />
       </article>
       <div class="flex justify-end">
