--- a/src/components/CamVideoList.astro
+++ b/src/components/CamVideoList.astro
@@ -32,7 +32,7 @@ import Poster from "@images/vp.webp";
         <button class="opacity-60 cursor-pointer" @click="loadVideos"
           >Reload list</button
         >
-        <a class="opacity-60" href="/security/view/">View live</a>
+        <a class="opacity-60" href="/security/view/">Live view</a>
       </li>
       <li>
         <div class="flex justify-center py-8" x-show="isLoading">
