📝 (CamVideoList.astro): actualizar texto del botón y mejorar accesibilidad 💡 (live.astro): comentar atributos de imagen para mejor legibilidad y mantenimiento

--- a/src/components/CamVideoList.astro
+++ b/src/components/CamVideoList.astro
@@ -20,9 +20,9 @@ import Poster from "@images/vp.webp";
       role="alert"
       x-show="hasError"
       x-cloak>
-      Error al cargar, intenta <button
+      Error on loading video list, try <button
         class="btn btn-sm btn-error btn-outline"
-        @click="loadVideos">recargar</button
+        @click="loadVideos">reloading</button
       >
     </p>
 
