📝 (live.astro): actualizar el texto alternativo del elemento img para mejorar la accesibilidad 💡 (live.astro): añadir comentarios explicativos al código de carga y error del elemento img

--- a/src/pages/live.astro
+++ b/src/pages/live.astro
@@ -10,7 +10,7 @@ import { ArrowLeft } from "lucide-astro";
       <img
         src="https://cams.mabreumx.com/101"
         class="skeleton aspect-video rounded-box w-full shadow-md my-4 flex justify-center items-center italic text-xl"
-        alt="Vista de cámara"
+        alt="Camera view"
         @load="$el.classList.remove('skeleton')"
         @error="$el.classList.remove('skeleton'); $el.alt = 'Camera not avalaible'"
       />
