--- a/src/components/CamVideoList.astro
+++ b/src/components/CamVideoList.astro
@@ -77,7 +77,7 @@ import Poster from "@images/vp.webp";
               </div>
               <div class="flex gap-2 items-end">
                 <a
-                  class="btn btn-sm btn-square btn-info btn-soft hover:text-white"
+                  class="btn btn-sm btn-square btn-info btn-soft hover:text-white focus-visible:text-white"
                   aria-label="Descargar video"
                   download
                   target="_blank"
@@ -85,7 +85,7 @@ import Poster from "@images/vp.webp";
                   <Download />
                 </a>
                 <button
-                  class="btn btn-sm btn-square btn-info btn-soft hover:text-white"
+                  class="btn btn-sm btn-square btn-info btn-soft hover:text-white focus-visible:text-white"
                   aria-label="Reproducir video"
                   @click="playVideo(video)">
                   <Play />
