--- a/src/pages/live.astro
+++ b/src/pages/live.astro
@@ -18,7 +18,7 @@ import { ArrowLeft } from "lucide-astro";
     <div class="flex justify-end">
       <a class="btn btn-info btn-soft" href="../">
         <ArrowLeft size="16" />
-        Regresar</a
+        Back to list</a
       >
     </div>
   </div>
