--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Notification from "@components/Notification.astro";
 
 const { title = "" } = Astro.props;
 ---
@@ -16,5 +17,6 @@ const { title = "" } = Astro.props;
     <main class="">
       <slot />
     </main>
+    <Notification />
   </body>
 </html>
