fix(Default.astro): refatorar el manejo de archivos en eventos SSE perf(Default.astro): optimizar la creación de notificaciones y eliminación de bucle forEach

--- a/src/layouts/Default.astro
+++ b/src/layouts/Default.astro
@@ -44,15 +44,14 @@ const { title = "" } = Astro.props;
 
   sse.addEventListener("fileAdded", (e) => {
     const data = JSON.parse(e.data);
-    console.log(data);
     const { files } = data;
 
-    files.forEach(({ name }) => {
+    if (files.length) {
       notification.create({
-        message: `New file added: ${name}`,
+        message: "New files added",
         type: "alert-info",
       });
-    });
+    }
 
     const $reloadButton = document.querySelector("#reloadBtn");
     $reloadButton?.click();
